feat(components): 新增图片轮播、作者卡片和下载卡片组件
添加三个新组件：ImageGallery、AuthorCard和DownloadCard，用于增强文档展示效果。ImageGallery支持图片轮播和缩略图导航；AuthorCard展示作者信息，支持随机马卡龙色背景；DownloadCard提供美观的下载链接展示，支持动态按钮文字。同时更新相关文档和配置，注册新组件到VitePress主题中。

refactor(docs): 优化资源展示页布局和内容
移除冗余卡片组件，使用新组件重构资源展示页，提升用户体验和视觉效果。更新Markdown写作指南，添加新组件使用说明。

style(theme): 添加百度网盘和Gitee链接图标
新增自定义链接图标样式，为百度网盘和Gitee链接添加专属图标，提升链接辨识度。

--- a/docs/.vitepress/theme/style/link.css
+++ b/docs/.vitepress/theme/style/link.css
@@ -82,3 +82,31 @@
     top: -4px;
     margin-right: 4px;
 }
+
+/* 百度网盘 */
+.vp-doc a[href^="https://pan.baidu.com/"]:before {
+    content: '';
+    background-image: url(/icons/baidu.svg);
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    background-size: cover;
+    top: -2px;
+    margin-right: 4px;
+}
+
+/* Gitee */
+.vp-doc a[href^="https://gitee.com/"]:before {
+    content: '';
+    background-image: url(/icons/gitee.svg);
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    vertical-align: middle;
+    position: relative;
+    background-size: cover;
+    top: -2px;
+    margin-right: 4px;
+}
